<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/margenIzquierdo"
    android:paddingRight="@dimen/margenIzquierdo"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@android:style/TextAppearance.Medium">

            <!-- EditText para el nombre -->
            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nombre"
                android:inputType="text"
                android:textSize="@dimen/text_size"
                android:importantForAutofill="no" />
        </android.support.design.widget.TextInputLayout>

        <!-- TextView para mostrar Fecha de nacimiento -->
        <TextView
            android:id="@+id/tvFechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/textview_padding"
            android:paddingRight="@dimen/textview_padding"
            android:text="@string/fecha_nacimiento"
            android:textSize="@dimen/text_size" />

        <DatePicker
            android:id="@+id/dpFechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner">

        </DatePicker>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@android:style/TextAppearance.Medium">

            <!-- EditText para el teléfono -->
            <EditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_telefono"
                android:inputType="phone"
                android:textSize="@dimen/text_size"
                android:importantForAutofill="no" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@android:style/TextAppearance.Medium">

            <!-- EditText para el Email -->
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/text_size"
                android:importantForAutofill="no"
                tools:ignore="TextFields" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@android:style/TextAppearance.Medium">

            <!-- EditText para la descripción -->
            <EditText
                android:id="@+id/etDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_descripcion"
                android:importantForAutofill="no"
                android:textSize="@dimen/text_size" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_siguiente"
            android:textAllCaps="false" />

    </LinearLayout>
</ScrollView>